# Wingine

./: CMakeLists.txt  LICENSE  Makefile  README.md  WgUtils.cpp  WgUtils.hpp  Wingine.cpp  Wingine.hpp  depth_test.cpp  test.cpp  texture_test.cpp
examples/: depth_test.cpp  frag.cpp  instance_test.cpp  model_viewer.cpp  offscreen.cpp  renderdoc_util.cpp  renderdoc_util.hpp  test.cpp  test2.cpp  texture_test.cpp  trivial.cpp
include/: WgUtils.hpp  Wingine.hpp  buffer.hpp  declarations.hpp  framebuffer.hpp  image.hpp  pipeline.hpp  renderfamily.hpp  resource.hpp  semaphore.hpp  util.hpp
include/WgUtils/: camera.hpp  declarations.hpp  model.hpp
src/: CommandManager.cpp  CommandManager.hpp  CompatibleRenderPassRegistry.cpp  CompatibleRenderPassRegistry.hpp  DefaultFramebufferManager.cpp  DefaultFramebufferManager.hpp  DeviceManager.cpp  DeviceManager.hpp  QueueManager.cpp  QueueManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp  VulkanInstanceManager.cpp  VulkanInstanceManager.hpp  WgUtils.cpp  Wingine.cpp  Wingine.hpp  Wingine.impl.hpp  buffer.cpp  buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  constants.hpp  declarations.hpp  deviceEvaluation.cpp  deviceEvaluation.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  log.hpp  pipeline.cpp  pipeline.hpp  queueUtils.cpp  queueUtils.hpp  renderfamily.cpp  renderfamily.hpp  resource.cpp  resource.hpp  semaphore.cpp  (+6 more)
src/WgUtils/: camera.cpp  declarations.hpp  model.cpp  model.hpp
src/buffer/: BasicBuffer.cpp  BasicBuffer.hpp  BasicStorageBuffer.cpp  BasicStorageBuffer.hpp  IBuffer.cpp  IBuffer.hpp  IIndexBuffer.cpp  IIndexBuffer.hpp  IStorageBuffer.hpp  IVertexBuffer.hpp  InternallyStagedIndexBuffer.cpp  InternallyStagedIndexBuffer.hpp  InternallyStagedStorageBuffer.hpp  InternallyStagedStorageBuffer.impl.hpp  InternallyStagedVertexBuffer.hpp  InternallyStagedVertexBuffer.impl.hpp  StagingBuffer.cpp  StagingBuffer.hpp  StagingBufferManager.cpp  StagingBufferManager.hpp  bufferUtil.cpp  bufferUtil.hpp  copyBuffer.cpp  copyBuffer.hpp
src/command/: CommandChainController.cpp  CommandChainController.hpp  CommandControllerSettings.cpp  CommandControllerSettings.hpp  recordUtil.cpp  recordUtil.hpp
src/core/: ChainReel.cpp  ChainReel.hpp  CommandManager.cpp  CommandManager.hpp  DeviceManager.cpp  ElementChainBase.cpp  ElementChainBase.hpp  IElementChain.hpp  QueueManager.cpp  QueueManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp  VulkanInstanceManager.cpp  VulkanInstanceManager.hpp  constants.hpp  queueUtils.cpp
src/draw_pass/: BasicDrawPass.cpp  BasicDrawPass.hpp  BasicDrawPassSettings.cpp  BasicDrawPassSettings.hpp  DrawPassBase.cpp  DrawPassBase.hpp  IDrawPass.cpp  IDrawPass.hpp
src/framebuffer/: BasicFramebuffer.cpp  BasicFramebuffer.hpp  BasicFramebufferChain.hpp  BasicFramebufferChain.impl.hpp  BasicFramebufferSetup.cpp  BasicFramebufferSetup.hpp  DepthOnlyFramebuffer.cpp  DepthOnlyFramebuffer.hpp  FramebufferChainBase.cpp  FramebufferChainBase.hpp  FramebufferTexture.cpp  FramebufferTexture.hpp  FramebufferTextureChain.cpp  FramebufferTextureChain.hpp  HostCopyingFramebufferChain.cpp  HostCopyingFramebufferChain.hpp  IFramebuffer.cpp  IFramebuffer.hpp  IFramebufferChain.cpp  IFramebufferChain.hpp  SwapchainFramebuffer.cpp  SwapchainFramebuffer.hpp  SwapchainFramebufferChain.cpp  SwapchainFramebufferChain.hpp  framebufferUtil.cpp  framebufferUtil.hpp
src/image/: BasicImage.cpp  BasicImage.hpp  BasicImageSettings.cpp  BasicImageSettings.hpp  BasicImageSetup.cpp  BasicImageSetup.hpp  BasicStreamingTextureChain.hpp  BasicTexture.cpp  BasicTexture.hpp  BasicTextureChain.cpp  BasicTextureChain.hpp  CopyImageAuxillaryData.hpp  HostVisibleImageView.cpp  HostVisibleImageView.hpp  IDimensionable.hpp  IImage.cpp  IImage.hpp  ITexture.hpp  ITextureChain.hpp  ImageChainCopier.cpp  ImageChainCopier.hpp  ImageCopier.cpp  ImageCopier.hpp  ImageToBufferCopier.cpp  ImageToBufferCopier.hpp  InternallyStagedTexture.cpp  InternallyStagedTexture.hpp  StagingImage.cpp  StagingImage.hpp  StorageTexture.cpp  StorageTexture.hpp  SwapchainColorImage.cpp  SwapchainColorImage.hpp  copyImage.cpp  copyImage.hpp  imageUtil.cpp  imageUtil.hpp  samplerUtil.cpp  samplerUtil.hpp
src/memory/: memoryUtil.cpp  memoryUtil.hpp  memoryUtil.impl.hpp
src/pipeline/: BasicComputePipeline.cpp  BasicComputePipeline.hpp  BasicPipeline.cpp  BasicPipeline.hpp  BasicPipelineSetup.cpp  BasicPipelineSetup.hpp  BasicShader.cpp  BasicShader.hpp  ComponentType.hpp  IComputePipeline.hpp  IPipeline.hpp  IShader.hpp  PipelineLayoutInfo.hpp  ShaderStage.hpp  VertexAttribDesc.cpp  VertexAttribDesc.hpp  WrappedPLCI.cpp  WrappedPLCI.hpp  pipelineUtil.cpp  pipelineUtil.hpp  shaderUtil.cpp  shaderUtil.hpp  types.hpp
src/render_pass/: CompatibleRenderPassRegistry.cpp  CompatibleRenderPassRegistry.hpp  renderPassUtil.cpp  renderPassUtil.hpp
src/resource/: BasicRawUniform.cpp  BasicRawUniform.hpp  BasicRawUniformChain.cpp  BasicRawUniformChain.hpp  BasicResourceChain.hpp.bkp  BasicResourceChain.impl.hpp.bkp  BasicResourceSet.cpp  BasicResourceSet.hpp  BasicResourceSetChain.cpp  BasicResourceSetChain.hpp  BasicResourceSetChain.impl.hpp  BasicUniform.hpp  BasicUniform.impl.hpp  BasicUniformChain.hpp  BasicUniformChain.impl.hpp  IRawUniform.hpp  IRawUniformChain.hpp  IResource.hpp  IResourceChain.hpp  IResourceChain.hpp.bkp  IResourceSet.hpp  IResourceSetChain.hpp  IResourceWriteAuxillaryData.hpp  IUniform.hpp  IUniformChain.hpp  RawUniformChain.hpp  ResourceBinding.cpp  ResourceBinding.hpp  (+11 more)
wingine_c/: CMakeLists.txt  wingine_c.h
wingine_c/examples/: CMakeLists.txt  triangle.c  trivial.c
wingine_c/src/: attrib_desc.cpp  attrib_desc.h  buffer.cpp  buffer.h  catch.hpp  command.cpp  command.h  common.hpp  draw_pass.cpp  draw_pass.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  read_spv.cpp  read_spv.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  types.h  types.hpp  uniform.cpp  uniform.h  wg_buffer.cpp  wg_buffer.h  wg_uniform.cpp  wg_uniform.h  wg_wingine.cpp  wg_wingine.h  wgut_c.h  wingine.cpp  wingine.h  winval.cpp  winval.h
(+53 files in other folders)
